--- a/src/components/App.css
+++ b/src/components/App.css
@@ -33,7 +33,6 @@
   height: 100%;
 }
 .butCal1{
-  border :1px solid #DDD;
   color : black;
   cursor : pointer;
   font-size: 20px;
@@ -42,13 +41,15 @@
 
 }
 .butCal2{
-  border :1px solid #DDD;
   color : black;
   cursor : pointer;
   font-size: 20px;
   height: 100px;
   width: 50%;
 
+}
+.butCal1, butCal2 {
+  border :1px solid #DDD;
 }
 .butBackground1{
   background:gray;
